--- a/customer-rent-car.html
+++ b/customer-rent-car.html
@@ -76,6 +76,7 @@
         background-color: #0056b3;
       }
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Rent Car</h1>
