--- a/admin-login.html
+++ b/admin-login.html
@@ -15,6 +15,11 @@
       }
       .container {
         text-align: center;
+        width: 400px; /* Increase container width */
+        border: 2px solid white; /* Add white border */
+        padding: 20px; /* Add padding inside the border */
+        background-color: #ffffff; /* Add background color to container */
+        border-radius: 10px; /* Add border radius */
       }
       .form-group {
         margin: 10px 0;
@@ -31,11 +36,14 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
+        margin-top: 20px; /* Add margin-top to create space */
+        width: 100%; /* Increase button width */
       }
       .button:hover {
         background-color: #0056b3;
       }
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
@@ -54,6 +62,7 @@
         </div>
         <button type="submit" class="button">Login</button>
       </form>
+      <button class="button" onclick="window.location.href='http://localhost/car-rental-system/'">Go Back</button>
     </div>
   </body>
 </html>
