--- a/admin-rent-car.html
+++ b/admin-rent-car.html
@@ -40,6 +40,7 @@
         background-color: #0056b3;
       }
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
