--- a/login.html
+++ b/login.html
@@ -15,6 +15,11 @@
       }
       .container {
         text-align: center;
+        border: 2px solid white;
+        padding: 20px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        width: 400px;
       }
       .form-group {
         margin: 10px 0;
@@ -26,6 +31,7 @@
       }
       .button {
         padding: 10px;
+        width: 100%;
         background-color: #007bff;
         color: white;
         border: none;
@@ -35,7 +41,11 @@
       .button:hover {
         background-color: #0056b3;
       }
+      .go-back-button {
+        margin-top: 20px;
+      }
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
@@ -54,6 +64,7 @@
         </div>
         <button type="submit" class="button">Login</button>
       </form>
+      <button class="button go-back-button" onclick="window.location.href='http://localhost/car-rental-system/'">Go Back</button>
     </div>
   </body>
 </html>
