--- a/register-car.html
+++ b/register-car.html
@@ -15,6 +15,11 @@
       }
       .container {
         text-align: center;
+        width: 45%; /* Decreased from 50% to 45% */
+        background-color: white;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
       }
       .form-group {
         margin: 10px 0;
@@ -22,11 +27,12 @@
       .form-group input,
       .form-group select {
         padding: 10px;
-        width: 100%;
+        width: 90%;
         box-sizing: border-box;
       }
       .button {
         padding: 10px;
+        width: 90%;
         background-color: #007bff;
         color: white;
         border: none;
@@ -36,7 +42,21 @@
       .button:hover {
         background-color: #0056b3;
       }
+      .back-button {
+        padding: 10px;
+        width: 90%;
+        background-color: #6c757d;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 10px;
+      }
+      .back-button:hover {
+        background-color: #5a6268;
+      }
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
@@ -77,6 +97,7 @@
         </div>
         <button type="submit" class="button">Register Car</button>
       </form>
+      <button onclick="window.location.href='adminhome.html'" class="back-button">Go back</button>
     </div>
   </body>
 </html>
