--- a/register.html
+++ b/register.html
@@ -15,6 +15,12 @@
       }
       .container {
         text-align: center;
+        border: 1px solid #ccc;
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 400px; /* Increased width */
       }
       .form-group {
         margin: 10px 0;
@@ -31,11 +37,32 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
+        width: 200px; /* Increased width */
+        height: 40px;
+        display: inline-block;
+        line-height: 20px;
       }
       .button:hover {
         background-color: #0056b3;
       }
+      .button-link {
+        text-decoration: none;
+        display: inline-block;
+        width: 200px; /* Increased width */
+        height: 40px;
+        line-height: 40px; /* Center text vertically */
+        text-align: center;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      .button-link:hover {
+        background-color: #0056b3;
+      }
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
@@ -66,6 +93,9 @@
         </div>
         <button type="submit" class="button">Register</button>
       </form>
+      <div style="margin-top: 20px;">
+        <a href="http://localhost/car-rental-system" class="button-link">Go back</a>
+      </div>
     </div>
     <script>
       document
