--- a/userhome.html
+++ b/userhome.html
@@ -15,31 +15,43 @@
       }
       .container {
         text-align: center;
+        width: 400px; /* Increase container width */
+        border: 2px solid white; /* Add white border */
+        padding: 20px; /* Add padding inside the border */
+        background-color: #ffffff; /* Add background color to container */
+        border-radius: 10px; /* Add border radius */
+      }
+      .form-group {
+        margin: 10px 0;
+      }
+      .form-group input {
+        padding: 10px;
+        width: 100%;
+        box-sizing: border-box;
       }
       .button {
-        display: block;
-        width: 200px;
         padding: 10px;
-        margin: 10px auto;
         background-color: #007bff;
         color: white;
-        text-align: center;
-        text-decoration: none;
+        border: none;
         border-radius: 5px;
+        cursor: pointer;
+        margin-top: 20px; /* Add margin-top to create space */
+        width: 100%; /* Increase button width */
       }
       .button:hover {
         background-color: #0056b3;
       }
     </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
       <h1>Welcome to Your Home Page</h1>
       <p id="user-name">You have successfully registered and logged in.</p>
-      <a href="view-cars.html" class="button">View Cars</a>
-      <a href="advanced-search.html" class="button">Advanced Search</a>
-      <a href="reports.html" class="button">History</a>
-      <a href="logout.php" class="button">Logout</a>
+      <button class="button" onclick="location.href='view-cars.html'">View Cars</button>
+      
+      <button class="button" onclick="location.href='logout.php'">Logout</button>
     </div>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
