--- a/advanced-search.html
+++ b/advanced-search.html
@@ -91,6 +91,7 @@
         </div>
         <button type="submit" class="button">Search</button>
         <a href="view-cars.html" class="button" style="text-decoration: none;">Normal Search</a>
+        <button onclick="location.href='adminhome.html'" class="button">Back</button>
       </form>
 
       <table>
