--- a/reports.html
+++ b/reports.html
@@ -56,6 +56,7 @@
       <button onclick="location.href='day-car-status.html'" class="button">All Cars Status in a Day</button>
       <button onclick="location.href='report-customer-reservations.html'" class="button">Specific Customer Reservations Report</button>
       <button onclick="location.href='report-daily-payments.html'" class="button">Daily Payments Report</button>
+      <button onclick="location.href='adminhome.html'" class="button">Back</button>
     </div>
     
   </body>
