--- a/userhome.html
+++ b/userhome.html
@@ -49,7 +49,8 @@
     <div class="container">
       <h1>Welcome to Your Home Page</h1>
       <p id="user-name">You have successfully registered and logged in.</p>
-      <button class="button" onclick="location.href='view-cars.html'">View Cars</button>
+      <!-- <button class="button" onclick="location.href='view-cars.html'">View Cars</button> -->
+      <button class="button" onclick="location.href='view-car-customer.html'">View Cars</button>
       
       <button class="button" onclick="location.href='logout.php'">Logout</button>
     </div>
